Istio/Calculator/ui/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ui
  namespace: <PROJECT>  
  labels:
    app: ui
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
      annotations:
        sidecar.istio.io/inject: "false"        
    spec:
      containers:
      - name: ui-container
        image: <CONTAINER>
        imagePullPolicy: Always   
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
          name: http-server
      imagePullSecrets:
      - name: bluemix-calculator-secret
