Istio/Calculator/ui/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: <PROJECT>
  labels:
    app: ui   
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: ui
