Istio/Calculator/ui/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ui
  namespace: calculator 
spec:
  podSelector:
    matchLabels:
      app: ui
  ingress:
  - ports:
    - port: 80   
    from: []
